crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes-10.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: nodes
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module",
            inputs: {
                "a": String {
                    direction: Input,
                    parts: [
                        Literal(
                            "string with space",
                        ),
                    ],
                },
            },
        },
    },
)
