crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes-6.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"anonymous_module { a <- -123 }\")"
---
Ok(
    {
        "[UUID]": NodeInstruct {
            identifier: "[UUID]",
            module: "anonymous_module",
            inputs: {
                "a": Numeric {
                    direction: Input,
                    value: "-123",
                },
            },
        },
    },
)
