crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__basic_nodes.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"named module {}\")"
---
Ok(
    {
        "named": NodeInstruct {
            identifier: "named",
            module: "module",
            inputs: {},
        },
    },
)
