crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_arithmetic-3.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (100 / 4) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Divide,
                        left: Number(
                            "100",
                        ),
                        right: Number(
                            "4",
                        ),
                    },
                },
            },
        },
    },
)
