crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_arithmetic-4.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (2 ^ 10) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Power,
                        left: Number(
                            "2",
                        ),
                        right: Number(
                            "10",
                        ),
                    },
                },
            },
        },
    },
)
