crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_arithmetic.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (10 - 3) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Subtract,
                        left: Number(
                            "10",
                        ),
                        right: Number(
                            "3",
                        ),
                    },
                },
            },
        },
    },
)
