crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_basic.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (123 + 123) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: BinaryOperation {
                        operation: Add,
                        left: Number(
                            "123",
                        ),
                        right: Number(
                            "123",
                        ),
                    },
                },
            },
        },
    },
)
