crates/conduit/src/dsl/snapshots/conduit__dsl__parser__tests__expression_nested-2.snap
---
source: packages/conduit/src/dsl/parser.rs
expression: "NodeParser :: parse(\"name module { property <- (((10))) }\")"
---
Ok(
    {
        "name": NodeInstruct {
            identifier: "name",
            module: "module",
            inputs: {
                "property": Expression {
                    direction: Input,
                    value: Number(
                        "10",
                    ),
                },
            },
        },
    },
)
